# mattermost-bot

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: admins.rs  result.rs  simple.rs
src/: command.rs  error.rs  handler.rs  lib.rs  response.rs
