[package]
name = "mattermost-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
mattermost_api = { version = "0.7.0", default-features = false, features = ["rustls"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
tracing = "0.1.41"

[dev-dependencies]
anyhow = "1.0.98"
