[package]
name = "mattermost-bot"
version = "0.3.0"
authors = ["Patryk Sidzina <patryk.sidzina+mmb@gmail.com>"]
description = "Create a Mattermost bot that listens and responds to commands"
homepage = "https://github.com/patryk-s/mattermost-bot"
repository = "https://github.com/patryk-s/mattermost-bot"
categories = ["api-bindings"]
keywords = ["mattermost", "client"]
license = "MIT"
readme = "README.md"
edition = "2024"
include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE",
    "README.md",
]


[dependencies]
async-trait = "0.1.88"
mattermost_api = { version = "0.8.1", default-features = false, features = ["rustls", "ws-keep-alive"] }
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
tracing = "0.1.41"

[dev-dependencies]
anyhow = "1.0.98"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
